# leptos_notification

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Trunk.toml  index.html
demo_app/: demo.rs  index.html
src/: lib.rs  main.rs  notification.rs
